2003-12-07  Shakti <shakti.sen@wipro.com>

 	  Remove the applet from the list when it is deleted from panel.
 
 	* stickynotes/stickynotes_applet.c: stickynotes_applet_new ()
 	  'destroy' signal is connected to the applet.
 	* stickynotes/stickynotes_applet_callbacks.c: applet_destroy_cb ()
 	  Added the above function to remove the applet from the list when
           it is deleted from the panel.
 	* stickynotes/stickynotes_applet_callbacks.h
 	  Added declaration of applet_destroy_cb ().
 	  Fixes the bug #124094

2003-11-25  Muktha  <muktha.narayan@wipro.com>

	* stickynotes.c: Escape text to allow '&' in the title.
	  Fixes bug #122050.

2003-11-06  Breda McColgan  <Breda.McColgan@sun.com>

        * help/C/stickynotes_applet.xml: Updated for GNOME 2.4.2
        * help/C/stickynotes_applet-C.omf : Updated to reflect new manual version number and date
        * help/C/l10n.txt: Updated Summary of Changes section

Mon Sep 15 15:39:20 2003  George Lebl <jirka@5z.com>

	* stickynotes_applet.c: when started in lockdown mode, hide the
	  preferences item

2003-09-05  Christian Rose  <menthos@menthos.com>

	* stickynotes_applet_callbacks.c: Fix the two broken, recently
	added messages so that they match the spelling of already existing
	messages.

2008-09-04  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet.c, stickynotes_applet_callbacks.c, Makefile.am:
	  Used the egg_* functions so that help actually gets displayed. Also
	  made it so that the prefs dialog appears in the same desktop that
	  the applet itself is in. Applied Muktha's patch to fix bug #121433,

2008-08-26  Loban A Rahman <loban@earthling.net>

	* stickynotes.glade, stickynotes.c: Added a help button to every
	  sticky note's properties dialog. Fixes bug #120691.

2003-08-17  Loban A Rahman <loban@earthling.net>

	* stickynotes/docs/C/stickynotes_applet.xml: Fixed some faulty wording
	  in the "Advanced Settings" portion of Breda's documentation.
