@@ -1,3 +1,7 @@
+2003-12-11  Muktha <muktha.narayan@wipro.com>
+
+	* stickynotes_applet.c: Add accessible name. Fixes bug #128259.
+
 2003-12-07  Shakti <shakti.sen@wipro.com>
 
  	  Remove the applet from the list when it is deleted from panel.
